# -spatial-et0-atlantic-forest

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  explanation.md  pyproject.toml  relatorio_sbc.tex  requirements-dev.txt  requirements.txt
src/et0spatial/: __init__.py  cli.py  core.py  dashboard.py  figures.py  ingest.py  pipeline.py  tracking.py
tests/: test_smoke.py
